# range_libc

./: .gitignore  CMakeLists.txt  README.md  generate_serialized.sh  main.cpp  make_plots.py  plot_points.py  visualize.py
cmake/: detect_gpu.cmake
includes/: CudaRangeLib.h  RangeLib.h  RangeUtils.h  kernels.cu
maps/: small.map.yaml  synthetic.map.yaml
paper/: basement_bw.psd  coord_system.xml  main.tex
paper/data/: generate_data.sh  make_statistics.py  make_violin.py  pcddt.json
paper/data/summary/: stats.txt
protobufs/: omap.proto
protos/: omap.fbs  omap_generated.h
pywrapper/: RangeLib.pyx  RangeLibc.pyx  compile_with_cuda.bash  compile_with_cuda.sh  compile_with_trace.sh  setup.py  test.py
